// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`primary-language-zh:locales/en.json 1`] = `
"{
    add: {
        value: add from zh
    },
    keep: {
        singular_value: singular en value,
        value: value en,
        value_plural: values en
    },
    remove: {
    }
}"
`;

exports[`primary-language-zh:locales/pt-BR.json 1`] = `
"{
    add: {
        value: add from zh
    },
    keep: {
        singular_value: singular zh value,
        value: value zh
    },
    remove: {
    }
}"
`;

exports[`primary-language-zh:locales/ru.json 1`] = `
"{
    add: {
        value: add from zh
    },
    keep: {
        singular_value: singular ru value,
        value_0: values ru 0,
        value_1: values ru 1,
        value_2: values ru 2
    },
    remove: {
    }
}"
`;

exports[`primary-language-zh:locales/zh.json 1`] = `
"{
    add: {
        value: add from zh
    },
    keep: {
        singular_value: singular zh value,
        value: value zh
    },
    remove: {
    }
}"
`;

exports[`primary-language-zh:stderr.txt 1`] = `""`;

exports[`primary-language-zh:stdout.txt 1`] = `
"Pushed keys to actual/locales/en.json: value
Removed keys from actual/locales/en.json: remove, remove_0, remove_plural
Pushed keys to actual/locales/ru.json: value
Removed keys from actual/locales/ru.json: remove, remove_0, remove_1, remove_2, remove_plural
Pushed keys to actual/locales/pt-BR.json: value, value, singular_value
"
`;
